--- a/front/src/pages/Company/Company.scss
+++ b/front/src/pages/Company/Company.scss
@@ -1,5 +1,6 @@
 .company-main {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    // justify-content: center;
+    // align-items: center;
+    // text-align: center;
+    // display: "flex"
 }
