--- a/frontend/src/pages/Login/login.scss
+++ b/frontend/src/pages/Login/login.scss
@@ -1,41 +1,52 @@
-@media all and (min-width: 1024px) {
-  .input-forms {
-    padding: 50px;
-    input{
-      width: 20vw;
-      margin-left: 20px;
-    }
-  }
+// @media all and (min-width: 1024px) {
+//   .input-forms {
+//     padding: 50px;
+//     input{
+//       width: 20vw;
+//       margin-left: 20px;
+//     }
+//   }
 
-}
-@media all and (max-width: 1024px) {
-  .input-forms {
-    padding: 50px;
-    input{
-      width: 20vw;
-    }
-  }
-}
+// }
+// @media all and (max-width: 1024px) {
+//   .input-forms {
+//     padding: 50px;
+//     input{
+//       width: 20vw;
+//     }
+//   }
+// }
 
-@media all and (max-width: 768px) {
-  .input-forms {
-    padding: 60px;
-    input{
-      width: 20vw;
-    }
-  }
-}
+// @media all and (max-width: 768px) {
+//   .input-forms {
+//     padding: 60px;
+//     input{
+//       width: 20vw;
+//     }
+//   }
+// }
 
 
 .login-wrapper {
   font-family: 'Noto Sans KR', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  .container {
+    border-radius: 3%;
+    width: 100%;
+    background-image: url("../../../public/img/paper-background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
   .input-forms {
     display: block;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
     border-radius: 20px;
+    padding: 50px;
     
     img{
       width: 200px;
