--- a/frontend/src/pages/Signup/signUp.scss
+++ b/frontend/src/pages/Signup/signUp.scss
@@ -1,16 +1,16 @@
 @media all and (min-width: 1024px) {
   .input-forms {
-    padding: 35px;
+
     input{
       width: 20vw;
-      margin-left: 20px;
+      // margin-left: 10px;
     }
   }
 
 }
 @media all and (max-width: 1024px) {
   .input-forms {
-    padding: 50px;
+
     input{
       width: 20vw;
     }
@@ -19,7 +19,7 @@
 
 @media all and (max-width: 768px) {
   .input-forms {
-    padding: 60px;
+
     input{
       width: 20vw;
     }
@@ -28,72 +28,43 @@
 
 
 
-.container {
-  display: grid;
-  grid-template-columns: 4fr 5fr;
-  height: 100vh;
-}
-
-.box1 {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  .logo{
-    margin-top: 10%;
-    img{
-      width: 300px;
-      margin-inline-end: 50px;
-    }
-  }
-  .description{
-    margin-top: 20px;
-    display: grid;
-    text-align: start;
-    
-    h2{
-      margin-inline: 80px;
-      margin-block: 30px;
-      font-size: 30px;
-    }
-  }
-}
-
-.box2 {
-  background-color: #88c4ff;
-  opacity: 80%;
-  padding: 5px;
-  .input-label {
-    justify-content: center;
-  }
-}
-
 .signup-wrapper {
   font-family: 'Noto Sans KR', sans-serif;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .container {
+    border-radius: 3%;
+    width: 90%;
+    background-image: url("../../../public/img/paper-background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .input-forms {
-    margin: 5%;
+    margin-block: 3%;
+    margin-left: 10%;
     display: grid;
     align-items: center;
-    background-color: #ffffff;
     border-radius: 15px;
+    width: 80%;
+    height: 80%;
 
+    .input-forms-item {      
+      margin-top: 3%;
+      padding: 5px 0;
+      display: flex;
+      justify-content: space-between;
+    }
     .input-label {
-      margin-right: 10px;
+      margin-right: 15%;
       margin-left: 10px;
       font-size: 15px;
       font-weight: bold;
       color: #000000;
     }
-    .input-forms-item {
-      margin-top: 10px;
-      padding: 5px 0;
-      display: flex;
-      justify-content: space-between;
 
-    }
     .error-message {
-      font-size: 15px;
+      font-size: 13px;
       text-align: start;
       margin-left: 10px;
       color: red;
