fix: 로그인 외 회원가입 기능 추가

--- a/frontend/src/pages/Auth/Login/login.scss
+++ b/frontend/src/pages/Auth/Login/login.scss
@@ -36,7 +36,7 @@
   .container {
     border-radius: 3%;
     width: 100%;
-    background-image: url("../../../public/img/paper-background.png");
+    background-image: url("../../../../public/img/paper-background.png");
     background-repeat: no-repeat;
     background-size: cover;
   }
