--- a/frontend/src/pages/Company/Company.scss
+++ b/frontend/src/pages/Company/Company.scss
@@ -1,6 +1,22 @@
 .company-main {
-    // justify-content: center;
-    // align-items: center;
-    // text-align: center;
-    // display: "flex"
-}
+    .MuiBox-root:first-child {
+      display: flex;
+      width: 100%;
+      border-radius: 40px;
+      height: 150px;
+      align-items: center;
+      justify-content: center;
+      h2 {
+        color: white;
+      }
+      h3 {
+        color: white;
+      }
+    }
+    
+    .MuiBox-root:last-child {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
