--- a/frontend/src/components/MyPage-Components/MySubscribe/Sub-Journalist/subJournalist.scss
+++ b/frontend/src/components/MyPage-Components/MySubscribe/Sub-Journalist/subJournalist.scss
@@ -33,6 +33,7 @@
   object-fit: cover;
   border-radius: 50%;
   cursor: pointer;
+  border: 2px solid #000000ab;
 }
 
 /* 텍스트 스타일 */
@@ -44,7 +45,7 @@
 
 /* 선택된 이미지 스타일 */
 .slick-current img {
-  border: 3px solid #0066ff;
+  border: 5px solid #4aa4ffee;
 }
 
 /* 선택된 이미지 텍스트 스타일 */
@@ -86,14 +87,14 @@
 .slick-arrow {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  // transform: translateY(-50%);
   z-index: 1;
   display: block;
   width: 20px;
   height: 20px;
   margin-top: -10px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #06c;
   border: 2px solid #0066ff;
   border-radius: 50%;
   opacity: 0.5;
