feat: style update

--- a/frontend/src/components/Company-Components/CompanyDetail/CompanyDetail.scss
+++ b/frontend/src/components/Company-Components/CompanyDetail/CompanyDetail.scss
@@ -2,7 +2,7 @@
     text-align: left;
   
     .companydetail-container {
-      background-color: #e2e2e2;
+      background-color: #D8D8D8;
       border-radius: 20px;
   
       .companydetail-top {
