--- a/frontend/src/components/Reporter-Components/ReporterCarousel/ReporterCarousel.scss
+++ b/frontend/src/components/Reporter-Components/ReporterCarousel/ReporterCarousel.scss
@@ -1,7 +1,7 @@
-$color-purple: 'white';
-$color-pink: 'white';
-$color-gray: 'white';
-$color-black: 'white';
+$color-purple: "white";
+$color-pink: "white";
+$color-gray: "white";
+$color-black: "white";
 $card-size: 23rem;
 
 .reportercarousel-main {
@@ -11,8 +11,7 @@ $card-size: 23rem;
   justify-content: center;
   overflow: hidden;
   background-image: linear-gradient(45deg, $color-purple, $color-pink);
-  font-family: 'Montserrat', sans-serif;
-
+  font-family: "Montserrat", sans-serif;
 
   * {
     box-sizing: border-box;
@@ -29,8 +28,7 @@ $card-size: 23rem;
       position: absolute;
       width: 100%;
       height: 100%;
-      transform: 
-        rotateY(calc(var(--offset) * 50deg)) 
+      transform: rotateY(calc(var(--offset) * 50deg))
         scaleY(calc(1 + var(--abs-offset) * -0.4))
         translateZ(calc(var(--abs-offset) * -30rem))
         translateX(calc(var(--direction) * -5rem));
@@ -41,16 +39,20 @@ $card-size: 23rem;
     .reporter-card {
       margin: 10% 0 10% 0;
       display: flex;
-      align-items: center;
+      justify-content: center;
       width: 100%;
       height: 45%;
-      padding: 2rem;
-      background-color: hsl(0deg, 100%, 100%); //calc(100% - var(--abs-offset) * 50%)
+      padding: 2.5rem;
+      background-color: hsl(
+        0deg,
+        100%,
+        100%
+      ); //calc(100% - var(--abs-offset) * 50%)
       border-radius: 1rem;
       color: $color-gray;
       text-align: justify;
       transition: all 0.3s ease-out;
-      border: solid 1px #0066CC;
+      border: solid 1px #0066cc;
     }
 
     .nav {
@@ -66,16 +68,16 @@ $card-size: 23rem;
       user-select: none;
       background: unset;
       border: unset;
-      
+
       &.left {
         transform: translateX(-100%) translatey(-50%);
-        color: #0066CC;
+        color: #0066cc;
       }
-      
+
       &.right {
         right: 0;
         transform: translateX(100%) translatey(-50%);
-        color: #0066CC;
+        color: #0066cc;
       }
     }
   }
