design: 마이페이지 및 기본 CSS 수정

--- a/frontend/src/components/MyPage-Components/PersonalInfo/PasswordChange/passwordChange.scss
+++ b/frontend/src/components/MyPage-Components/PersonalInfo/PasswordChange/passwordChange.scss
@@ -1,11 +1,22 @@
+@media screen and (min-width: 768px) {
+  .password-verification{
+    width: 20vw;
+  }
+}
+@media screen and (max-width: 768px) {
+  .password-verification{
+    width: 23vw;
+  }
+}
+
+
 .password-verification{
   background-color: #0066CC;
   color: white;
-  font-size: 25px;
+  padding:1;
   text-align: center;
-  width: 250px;
   border-radius: 10px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .password-form {
