--- a/frontend/src/components/MyPage-Components/PersonalInfo/personalInfo.scss
+++ b/frontend/src/components/MyPage-Components/PersonalInfo/personalInfo.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 
 .personal-info{
   .basic-Info {
@@ -24,6 +25,8 @@
     }
   }
 }
+
+
 
 
 
