--- a/frontend/src/pages/Home/home.scss
+++ b/frontend/src/pages/Home/home.scss
@@ -156,10 +156,15 @@
     .description{
       font-size: 4vh;
       font-weight: bold;
+      
     }
   }
 
 }
 
+.house__contents-title{
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.8));
 
+}
 
