feat: 기자별 디테일페이지 무한스크롤

--- a/frontend/src/components/Reporter-Components/ReporterDetail/ReporterDetail.scss
+++ b/frontend/src/components/Reporter-Components/ReporterDetail/ReporterDetail.scss
@@ -100,6 +100,7 @@
       border-radius: 10px;
       margin: -1% 2% 0 2%;
       padding: 0 0 1% 0;
+      justify-content: center;
     }
     .reporterdetail-right-news::-webkit-scrollbar {
       display: none;
