--- a/frontend/src/pages/Auth/Signup/signUp.scss
+++ b/frontend/src/pages/Auth/Signup/signUp.scss
@@ -2,12 +2,12 @@
   .input-forms {
 
     input{
-      width: 20vw;
-      // margin-left: 10px;
+      width: 15vw;
+      margin-left: 10px;
     }
     .input-label{
       font-size: 15px;
-      margin-right: 15%;
+      // margin-right: 10%;
     }
   }
 
@@ -20,7 +20,7 @@
     }
     .input-label{
       font-size: 13px;
-      margin-right: 10%;
+      // margin-right: 8%;
     }
   }
 }
@@ -29,7 +29,7 @@
   .input-forms {
 
     input{
-      width: 10vw;
+      width: 5vw;
     }
     .input-label{
       font-size: 13px;
@@ -68,7 +68,6 @@
       justify-content: space-between;
     }
     .input-label {
-      margin-right: 15%;
       margin-left: 10px;
       // font-size: 15px;
       font-weight: bold;
@@ -104,9 +103,12 @@
 }
 
 .input-datepicker{
-  display: flex;
-  justify-content: start;
-  margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  .input-label {
+    margin-right: 10px;
+  }
 }
 
 .submit-button{
@@ -115,3 +117,63 @@
   justify-content: center;
 }
 
+
+.input-datepicker {
+  position: relative;
+  width: 20vw;
+}
+
+// .input-datepicker .react-datepicker-wrapper {
+//   width: 100%;
+// }
+
+.input-datepicker .react-datepicker__input-container input {
+  width: 100%;
+  height: 25px;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.input-datepicker .react-datepicker__triangle {
+  display: none;
+}
+
+.input-datepicker .react-datepicker-popper {
+  z-index: 1;
+}
+
+.input-datepicker .react-datepicker {
+  border-radius: 10px;
+}
+
+.input-datepicker .react-datepicker__header {
+  background-color: #0072c6;
+  border-radius: 10px 10px 0 0;
+  color: #fff;
+}
+
+.input-datepicker .react-datepicker__day-name,
+.input-datepicker .react-datepicker__day {
+  color: #0072c6;
+}
+
+.input-datepicker .react-datepicker__day--selected {
+  background-color: #0072c6;
+  border-radius: 50%;
+  color: #fff;
+}
+
+.input-datepicker .react-datepicker__day--keyboard-selected {
+  background-color: rgba(0, 114, 198, 0.5);
+  border-radius: 50%;
+  color: #fff;
+}
+
+.input-datepicker .react-datepicker__day--today {
+  font-weight: bold;
+}
+
+.input-datepicker .react-datepicker__time-container {
+  display: none !important;
+}
