feat: 무한스크롤 기능 추가

--- a/frontend/src/pages/Region/Region.scss
+++ b/frontend/src/pages/Region/Region.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 
-.region-result{
-  text-align: start;
+.wordcloud::-webkit-scrollbar {
+  display: none;
 }
