--- a/frontend/src/components/Reporter-Components/ReporterCarousel/ReporterCarousel.scss
+++ b/frontend/src/components/Reporter-Components/ReporterCarousel/ReporterCarousel.scss
@@ -82,3 +82,19 @@ $card-size: 23rem;
     }
   }
 }
+
+.reportercarousel-main-news {
+  margin: 0 8% 3% 8%;
+  height: 70vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #D8d8d8;
+  border-radius: 10px;
+  overflow: auto;
+}
+
+.reportercarousel-main-news::-webkit-scrollbar {
+  display: none;
+}
