--- a/frontend/src/components/MyPage-Components/MyScrap/ArticleScrap/articleScrap.scss
+++ b/frontend/src/components/MyPage-Components/MyScrap/ArticleScrap/articleScrap.scss
@@ -1,5 +1,16 @@
-.scrap-card{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+
+
+.newscard-main {
+  width: 100%;
+  text-align: left;
+
+  .newscard-main-text {
+    margin: 0 0 0 -2%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    }
 }
