--- a/frontend/src/components/Company-Components/CompanyDetail/CompanyDetail.scss
+++ b/frontend/src/components/Company-Components/CompanyDetail/CompanyDetail.scss
@@ -1,5 +1,19 @@
+@keyframes smoothAppear {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
+
 .companydetail-wrapper {
   text-align: left;
+  opacity: 0;
+  animation: smoothAppear 1.5s forwards;
+  animation-delay: 0.2s;
 
   .companydetail-container {
     background-color: #d8d8d8;
@@ -113,26 +127,26 @@
   .companydetail-bot-news::-webkit-scrollbar {
     display: none;
   }
-  
+
   .companydetail-bot-right {
     width: 35%;
-    
+
     .companydetail-bot-right-h3 {
       margin-left: 5%;
     }
-    
+
     .companydetail-bot-right2 {
       margin: 5%;
-      border: 1px solid #D8D8D8;
+      border: 1px solid #d8d8d8;
     }
-    
+
     .companydetail-bot-right2-h3 {
       margin-left: 5%;
     }
-    
+
     .companydetail-bot-right3 {
       margin: 5%;
-      border: 1px solid #D8D8D8;
+      border: 1px solid #d8d8d8;
     }
   }
 }
