--- a/frontend/src/components/Reporter-Components/ReporterCarousel/ReporterCarousel.scss
+++ b/frontend/src/components/Reporter-Components/ReporterCarousel/ReporterCarousel.scss
@@ -90,7 +90,7 @@ $card-size: 23rem;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  border: 1px solid #D8d8d8;
+  border: 1px solid #d8d8d8;
   border-radius: 10px;
   overflow: auto;
 }
