design: 홈, 회원가입 페이지 디자인 추가

--- a/frontend/src/pages/Home/home.scss
+++ b/frontend/src/pages/Home/home.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
-
+// .inner-page {
+//   background-image: url('../../../public/img/whitepaper.jpg');
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
 .outer {
   height: 100vh;
   overflow-y: auto;
