--- a/frontend/src/pages/Auth/auth.scss
+++ b/frontend/src/pages/Auth/auth.scss
@@ -8,11 +8,17 @@
 .auth-box1 {
   width: 50%;
   height: 100%;
-  background-color: #fff3889a
+  // background-color: #fff3889a
 }
 
 .auth-box2 {
   width: 50%;
   height: 100%;
-  background-color: #fff3889a
+  // background-color: #fff3889a
+}
+
+.auth-wrapper {
+  background-image: url('../../../public/img/backpaper.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
