--- a/frontend/src/components/MyPage-Components/MyScrap/myScrap.scss
+++ b/frontend/src/components/MyPage-Components/MyScrap/myScrap.scss
@@ -1,28 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
-.myscrap{
-
-  .basic-Info{
+@import url("https://fonts.googleapis.com/css2?family=Jua&display=swap");
+.myscrap {
+  .basic-Info {
     margin-left: 3vw;
     justify-content: start;
     align-items: start;
     text-align: start;
   }
 
-  .scrap-chart{
+  .scrap-chart {
     margin-left: 3vw;
     justify-content: start;
     align-items: start;
     text-align: start;
   }
 
-  .scrap-article{
+  .scrap-article {
     margin-bottom: 100px;
     margin-left: 3vw;
     justify-content: start;
     align-items: start;
     text-align: start;
   }
-
 }
-
-
