--- a/frontend/src/components/Company-Components/CompanyCard/CompanyCard.scss
+++ b/frontend/src/components/Company-Components/CompanyCard/CompanyCard.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+
 .company-card {
     width: 230px;
     margin: 10px;
