--- a/frontend/src/components/Main-Components/MainNewsCard/MainNewsCard.scss
+++ b/frontend/src/components/Main-Components/MainNewsCard/MainNewsCard.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+
+
 .news-container {
   width: 100%;
   display: flex;
