--- a/frontend/src/components/MyPage-Components/MyScrap/ArticleScrap/articleScrap.scss
+++ b/frontend/src/components/MyPage-Components/MyScrap/ArticleScrap/articleScrap.scss
@@ -1,4 +1,6 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 
 
 .newscard-main {
