--- a/frontend/src/components/MyPage-Components/MySubscribe/mySubscribe.scss
+++ b/frontend/src/components/MyPage-Components/MySubscribe/mySubscribe.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 
 .mySubscribe{
