feat: 폰트 및 디자인 수정

--- a/frontend/src/pages/SearchResult/SearchResult.scss
+++ b/frontend/src/pages/SearchResult/SearchResult.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap');
+
 .searchresult-wrapper {
     .searchresult-container {
       text-align: left;
