--- a/frontend/src/components/Main-Components/Main/Main.scss
+++ b/frontend/src/components/Main-Components/Main/Main.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+
 @keyframes smoothAppear {
   from {
     opacity: 0;
