--- a/frontend/src/components/Main-Components/MainNewsCard/MainNewsCard.scss
+++ b/frontend/src/components/Main-Components/MainNewsCard/MainNewsCard.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&family=Nanum+Gothic:wght@800&display=swap');
 
 .news-container {
   width: 100%;
