--- a/frontend/src/components/Reporter-Components/ReporterDetail/ReporterDetail.scss
+++ b/frontend/src/components/Reporter-Components/ReporterDetail/ReporterDetail.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+
 .reporterdetail-wrapper {
   background-color: #0066cc;
   border-radius: 20px;
